# ChangeLog for sys-kernel/ck-sources
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/ck-sources/ChangeLog,v 1.49 2004/08/21 21:23:47 dsd Exp $

*ck-sources-2.6.8.1-r3 (21 Aug 2004)

  21 Aug 2004; Daniel Drake <dsd@gentoo.org> ck-sources-2.6.8.1-r3.ebuild:
  Version bump to 2.6.8.1-ck3, thanks to Jordan <lx_xero@comcast.net> and others
  in bug #59488. Patches for CAN 2004-0596 and 2004-0415 are no longer needed
  for 2.6.8.

  09 Aug 2004; <plasmaroo@gentoo.org> ck-sources-2.4.26-r1.ebuild,
  ck-sources-2.6.7-r5.ebuild, +files/ck-sources-2.4.26.cmdlineLeak.patch,
  +files/ck-sources-2.6.7.cmdlineLeak.patch:
  Added a patch for the /proc/cmdline leak vulnerability; bug #59905.

  08 Aug 2004; <plasmaroo@gentoo.org> ck-sources-2.4.26-r1.ebuild,
  +files/ck-sources-2.4.26.CAN-2004-0685.patch:
  Patched for CAN-2004-0685, bug #59769.

  04 Aug 2004; <plasmaroo@gentoo.org> ck-sources-2.4.26-r1.ebuild,
  -ck-sources-2.6.7-r1.ebuild, -ck-sources-2.6.7-r2.ebuild,
  ck-sources-2.6.7-r5.ebuild:
  Added a patch for the CAN-2004-0415 vulnerability, bug #59378. Older
  2.6.7 revisions removed.

  21 Jul 2004; <plasmaroo@gentoo.org> ck-sources-2.6.7-r5.ebuild,
  +files/ck-sources-2.6.7.CAN-2004-0596.patch:
  Added a patch for the CAN-2004-0596 issue; bug #57826.

*ck-sources-2.6.7-r5 (09 Jul 2004)

  09 Jul 2004; <plasmaroo@gentoo.org> ck-sources-2.4.26-r1.ebuild,
  +ck-sources-2.6.7-r5.ebuild, +files/ck-sources-2.4.26.CAN-2004-0497.patch:
  2.4 - patched for attribute vulnerabilities, bug #56479. 2.6.7-ck5 added
  which closes bug #56337 and satisfies bug #56479.

  09 Jul 2004; <plasmaroo@gentoo.org> ck-sources-2.4.26-r1.ebuild,
  +files/ck-sources-2.4.26.CAN-2004-0497.patch:
  2.4 - patched for attribute vulnerabilities, bug #56479. 2.6.7-ck5 added which
  closes bug #56337 and satisfies bug #56479.

  30 Jun 2004; <plasmaroo@gentoo.org> ck-sources-2.6.7-r2.ebuild,