@@ -1,18 +1,16 @@
-MD5 1a6c8d50b0304c4d0287bbc111adb73a ck-sources-2.6.8.1-r3.ebuild 1114
+MD5 85bee829fd8e703ca857a3085fb2da03 ck-sources-2.6.8.1-r4.ebuild 1114
 MD5 e71a5e2aa1c1f9a01b2675f4fa29cb10 ck-sources-2.4.26-r1.ebuild 3068
-MD5 44d200dbc983daf2707d378b0312ffc8 ChangeLog 8825
+MD5 e261a41cd1330ebf1dc3dd1c81c73ed1 ChangeLog 9116
 MD5 7187b8c28501f454a2412c9e4a7fcf53 metadata.xml 421
-MD5 68a33fa13efddaf5f7913152e54cff42 ck-sources-2.6.7-r5.ebuild 1289
 MD5 0f66013f643c79c97fda489618a4e2fd files/ck-sources-2.4.26.CAN-2004-0535.patch 476
 MD5 dc18e982f8149588a291956481885a8c files/ck-sources-2.4.26.CAN-2004-0495.patch 17549
 MD5 c2510fe1891f5a9effb12c2196922206 files/ck-sources-2.6.7.cmdlineLeak.patch 281
 MD5 8204afea1d572b49a4a80d8da4eef0c9 files/ck-sources-2.6.7.CAN-2004-0596.patch 1033
 MD5 d4a740ae56c2049247083af387a22a85 files/ck-sources-2.4.26.CAN-2004-0394.patch 350
 MD5 3bdf00d5f80fe9dfbfe8220e076cd04c files/ck-sources-2.4.26.CAN-2004-0497.patch 707
-MD5 9cd27cf33a4d5dab8419f8dd8716fb9b files/digest-ck-sources-2.6.8.1-r3 210
+MD5 bdc074d86c7327251d6d69d74d2a6c96 files/digest-ck-sources-2.6.8.1-r4 134
 MD5 39361f8d16b1fe5891aab62e92f8cd30 files/ck-sources-2.6.IPTables-RDoS.patch 390
 MD5 d1ccc2047be533c992f67270a150a210 files/ck-sources-2.4.26.cmdlineLeak.patch 388
-MD5 174edc3c3508fab8b2af4bb8db8077c6 files/digest-ck-sources-2.6.7-r5 205
 MD5 60d25ff310fc6abfdce39ec9e47345af files/ck-sources-2.4.26.CAN-2004-0685.patch 2809
 MD5 d580c02a7cde8c7aca5f167a0b23eb36 files/digest-ck-sources-2.4.26-r1 209
 MD5 c9da1bc82b906f6abc648c056e7bf662 files/ck-sources-2.4.26.FPULockup-53804.patch 354
