@@ -1,32 +1,0 @@
-# Copyright 1999-2004 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/ck-sources/ck-sources-2.6.8.1-r3.ebuild,v 1.1 2004/08/21 21:23:47 dsd Exp $
-
-UNIPATCH_LIST="${DISTDIR}/patch-${KV}.bz2
-	${FILESDIR}/${PN}-2.6.7.cmdlineLeak.patch"
-K_PREPATCHED="yes"
-UNIPATCH_STRICTORDER="yes"
-
-K_NOUSENAME="yes"
-ETYPE="sources"
-inherit kernel-2
-detect_version
-IUSE=""
-
-DESCRIPTION="Full sources for the Stock Linux kernel and Con Kolivas's high performance patchset"
-HOMEPAGE="http://members.optusnet.com.au/ckolivas/kernel/"
-SRC_URI="${KERNEL_URI} http://ck.kolivas.org/patches/2.6/${KV/-ck*/}/${KV}/patch-${KV}.bz2"
-
-KEYWORDS="~x86"
-
-pkg_postinst() {
-	postinst_sources
-
-	ewarn "IMPORTANT:"
-	ewarn "ptyfs support has now been dropped from devfs and as a"
-	ewarn "result you are now required to compile this support into"
-	ewarn "the kernel. You can do so by enabling the following options"
-	ewarn "    Device Drivers -> Character devices  -> Unix98 PTY Support"
-	ewarn "    File systems   -> Pseudo filesystems -> /dev/pts filesystem."
-	echo
-}
