@@ -1,3 +1,0 @@
-MD5 a74671ea68b0e3c609e8785ed8497c14 linux-2.6.7.tar.bz2 35092228
-MD5 b1b42d06ac25e794cb49c8f8b42a711e patch-2.6.7-ck5.bz2 68895
-MD5 52996b643afbd6ed9ba38b9483c2cac3 linux-2.6.7-CAN-2004-0415.patch 112612
