@@ -1,3 +1,0 @@
-MD5 9517ca999e822b898fbdc7e72796b1aa linux-2.6.8.1.tar.bz2 35628066
-MD5 f895eb7e82d878851276761b4c778fdc patch-2.6.8.1-ck3.bz2 729204
-MD5 52996b643afbd6ed9ba38b9483c2cac3 linux-2.6.7-CAN-2004-0415.patch 112612
