@@ -1,0 +1,2 @@
+MD5 9517ca999e822b898fbdc7e72796b1aa linux-2.6.8.1.tar.bz2 35628066
+MD5 7ad0a571991fe89359498f9d4bcee474 patch-2.6.8.1-ck4.bz2 731264
